Fixed the issue where images appeared too large in the preview. Resolved it by setting .image-preview { height: 100%; } in the CSS.

--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -992,6 +992,10 @@ input[type="checkbox"] {
         border-radius: 16px;
     }
 
+.image-preview {
+    height: 100%;
+}
+
 /* SECTIONS */
 
 .topbar {
